--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
   provider: ^6.1.2
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
@@ -58,6 +53,10 @@ flutter:
   assets:
     - assets/images/tofu.png
     - assets/images/landing_img.png
+    - assets/images/wallet.png
+    - assets/images/invest.png
+    - assets/images/plan.png
+    - assets/images/credit.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
