--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.6
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
   fl_chart: ^0.69.0
   flutter:
     sdk: flutter
