--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,11 +29,15 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.dzakyadlh.tofu"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
