--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
