--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  pinput: ^5.0.0
   provider: ^6.1.2
   skeletonizer: ^1.4.2
 
