--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   encrypt: ^5.0.3
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
+  firebase_storage: ^12.3.5
   fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   intl: ^0.19.0
+  permission_handler: ^11.3.1
   pinput: ^5.0.0
   provider: ^6.1.2
   skeletonizer: ^1.4.2
@@ -66,12 +69,13 @@ flutter:
     - assets/images/invest.png
     - assets/images/plan.png
     - assets/images/credit.png
-    - assets/images/song.jpg
     - assets/images/paypal.png
     - assets/images/visa.png
     - assets/images/bca.png
     - assets/images/mandiri.png
     - assets/images/amazon.png
+    - assets/images/despair.png
+    - assets/images/sadcat.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
